[tool.poetry]
name = "repl_python3_Rollinin"
version = "0.1.0"
description = ""
authors = ["SlyceDF <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
